--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@tsparticles/angular": "^3.0.0",
     "@tsparticles/engine": "^3.7.1",
+    "@tsparticles/slim": "^3.7.1",
     "face-api.js": "^0.22.2",
     "lottie-web": "^5.12.2",
     "ngx-lottie": "^12.0.0",
